          die;
        * Add Fn->match method
        * Simplify the compilation error messages of the character literal
        * Support brace in the hexadecimal escape character
          
          '\x{A}'
          '\x{6A}'
          "Foo \x{A} Bar"
          
        * Support single character in the hexadecimal escape character
        
          '\xA'
          "Foo \xA Bar"
        
        [SPECIFICATION FIX]
        * Add string literal escape character \$
        
0.9517  2022-05-19
        [CHANGE]
        * Numeric literal error messages.
        * Add "is_unicode_scalar_value" method to Unicode module.
        * Add "chr" method to Fn module.
        * Add "ord" method to Fn module.
        * Add "%lx" specifier to Fn->sprintf method.
        * Add "%lX" specifier to Fn->sprintf method.
        * Support any precision of %f of Fn->sprintf.
        * Add "repeat" method to Fn module.
        * Float object can be passed to Fn->srpintf "%f" and "%g" specifier.
        * Int object can be passed to Fn->srpintf "%c" specifier.
        
        [BUG FIX]
        * Fix the bug Github #212. Tests fail when perl is built with -DDEBUGGING set in ccflags [rt.cpan.org #142336].
        * Fix the bug that integer literal octal natation 0_123 is interpretted as 123, not 0123.
        * Fix the bug that switch statement jump the wrong position when default statement doesn't exist.
        [SPECIFICATION FIX]
        * "+" just before integer literal is tokenized as an unary operator.
        * C<-> can be at the beginning of integer literal of hex, octet, binary notations.
        [NON BACKWORD COMPATIBLE CHANGES]
        * Fn->sprintf("%+5u", 123) become "  123" from " +123". This becomes same as the result of Perl sprintf.
        * Fn->sprintf("%+5lu", 123) become "  123" from " +123". This becomes same as the result of Perl sprintf "%u".
        * Remove Fn->sprintf %U specifier because I relalize %U has different meaning in Perl sprintf. 